--- a/CAPTCHA/.classpath
+++ b/CAPTCHA/.classpath
@@ -5,6 +5,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" path="sources"/>
+	<classpathentry excluding="/" kind="src" path="sources"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
